seccion nosotros mobile

--- a/index.html
+++ b/index.html
@@ -373,14 +373,55 @@
         <!-- Sección de more-us mobile -->
         <section>
           <div class="container-more-us-mobile">
-            <div class="container-imagen-more-us-mobile">
-              <div class="overlay"></div>
-              <img class="img-mobile-more-us" src="images/mejores-p.jpeg" alt="imagen celula">
-              <div class="text-overlay"><!-- Nuevo elemento para el texto -->
-                <h2>Mejores Prácticas</h2>
-                <p>Utilizamos las mejores prácticas y los métodos estándar del sector para crear y brindar soluciones eficientes que impulsen el crecimiento y la gestión de tus negocios</p>
+
+
+            <div class="container-item-more-us-mobile">
+              <div class="container-imagen-more-us-mobile">
+                <div class="overlay"></div>
+                <img class="img-mobile-more-us" src="images/mejores-p.jpeg" alt="imagen celula">
+                <div class="text-overlay"><!-- Nuevo elemento para el texto -->
+                  <h2>Mejores Prácticas</h2>
+                  <p>Utilizamos las mejores prácticas y los métodos estándar del sector para crear y brindar soluciones
+                    eficientes que impulsen el crecimiento y la gestión de tus negocios</p>
+                </div>
               </div>
             </div>
+
+            <div class="container-item-more-us-mobile">
+              <div class="container-imagen-more-us-mobile">
+                <div class="overlay"></div>
+                <img class="img-mobile-more-us" src="images/enfoque-valor.jpeg" alt="imagen celula">
+                <div class="text-overlay"><!-- Nuevo elemento para el texto -->
+                  <h2>Enfoque de valor</h2>
+                  <p>Nuestros valores nos mueven a responder más eficazmente al acelerado entorno empresarial, y garantizan una interacción armoniosa dentro y fuera de ScrimSoft, que nos lleva a la excelencia profesional y a ser un socio de negocios valioso para nuestros clientes.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-item-more-us-mobile">
+              <div class="container-imagen-more-us-mobile">
+                <div class="overlay"></div>
+                <img class="img-mobile-more-us" src="images/orien-exi.jpg" alt="imagen celula">
+                <div class="text-overlay"><!-- Nuevo elemento para el texto -->
+                  <h2>Orientados al éxito</h2>
+                  <p>Dedicados a la entrega oportuna de soluciones con el máximo valor para usted. Nuestro éxito se define por el éxito de nuestros clientes.</p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="container-item-more-us-mobile">
+              <div class="container-imagen-more-us-mobile">
+                <div class="overlay"></div>
+                <img class="img-mobile-more-us" src="images/cercania-cons.jpeg" alt="imagen celula">
+                <div class="text-overlay"><!-- Nuevo elemento para el texto -->
+                  <h2>Cercanía constante</h2>
+                  <p>Estamos siempre a la disposicion para brindarte el asesoramiento continuo sobre nuestro servicios, asi como el constante mantenimiento y actualizacion de requerimientos a la medida</p>
+                </div>
+              </div>
+            </div>
+
+
           </div>
         </section>
 
