seccion nosotros mobile

--- a/index.html
+++ b/index.html
@@ -372,6 +372,11 @@
 
         <!-- Sección de more-us mobile -->
         <section>
+
+          <div class="title-section-services">
+            <span>Más sobre nosotros</span>
+          </div>
+
           <div class="container-more-us-mobile">
 
 
