seccion nosotros mobile

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 
                           <!-- Contenedor para la imagen -->
                           <div class="container-image-slide-services">
-                            <img class="image-services" src="images/asteroide.png" alt="">
+                            <img class="image-services" src="images/dw_personalizado.jpg" alt="">
                           </div>
 
                           <div class="container-description">
@@ -676,7 +676,7 @@
 
                           <!-- Contenedor para la imagen -->
                           <div class="container-image-slide-services">
-                            <img class="image-services" src="images/asteroide.png" alt="">
+                            <img class="image-services" src="images/i_api.jpg" alt="">
                           </div>
 
                           <div class="container-description">
@@ -712,7 +712,7 @@
 
                           <!-- Contenedor para la imagen -->
                           <div class="container-image-slide-services">
-                            <img class="image-services" src="images/asteroide.png" alt="">
+                            <img class="image-services" src="images/i_despliegue.jpg" alt="">
                           </div>
 
                           <div class="container-description">
@@ -748,7 +748,7 @@
 
                           <!-- Contenedor para la imagen -->
                           <div class="container-image-slide-services">
-                            <img class="image-services" src="images/asteroide.png" alt="">
+                            <img class="image-services" src="images/m_aplicaciones.jpg" alt="">
                           </div>
 
                           <div class="container-description">
@@ -783,9 +783,13 @@
                         <div class="description-service">
 
                           <!-- Contenedor para la imagen -->
-                          <div class="container-image-slide-services">
-                            <img class="image-services" src="images/asteroide.png" alt="">
+
+                          <div class="container-prueba-img">
+                            <div class="container-image-slide-services">
+                            
+                            </div>
                           </div>
+                          
 
                           <div class="container-description">
                             <div class="title-description-services">
